# openarm_moveit2_pose_executor

./: CMakeLists.txt  README.md  package.xml
config/: path.yaml
launch/: motion_planner.launch.py
src/: motion_planner_node.cpp  move_group_demo_openarm.cpp
